Added a footer with the copyright stuff and icons currently only github link works. Added an "under constructions" page for stuff I set up that will be added later

--- a/client/app/components/NavBar/NavBar.css
+++ b/client/app/components/NavBar/NavBar.css
@@ -1,5 +1,5 @@
 #homepage-navbar {
-  position: sticky;
+  position: fixed;
   width: 100%;
   height: 60px;
   background-color: var(--top-blue);
@@ -26,7 +26,7 @@
   align-items: center;
   height: 100%;
   border-left: 2px solid var(--orange-hl);
-  font-weight: 600;
+  font-weight: 500;
   padding: 0 30px;
 }
 
