--- a/client/app/components/App.css
+++ b/client/app/components/App.css
@@ -5,15 +5,20 @@
 }
 
 html {
-  background-color: var(--bg-color);
   color: #fff;
   font-size: 16px;
   font-family: 'Roboto', sans-serif;
 }
 
+html,
 body {
   background-color: var(--bg-color);
+  height: 100%;
   margin: 0;
+}
+
+#app {
+  min-height: 100%;
 }
 
 ul {
