--- a/client/app/components/Home/Footer/Footer.css
+++ b/client/app/components/Home/Footer/Footer.css
@@ -1,20 +1,26 @@
 #homepage-footer {
   flex-shrink: 0;
-  min-height: 10rem;
+  min-height: 7.5rem;
   padding: 0 40px;
   background-color: var(--top-blue);
 }
 
+.footer-copyright {
+  font-size: .75rem;
+}
+
 .footer-copyright:nth-child(1) {
-  margin-top: 25px;
+  margin-top: 20px;
 }
 
 #footer-icon-container {
   display: flex;
   flex-direction: row;
+  margin-bottom: 15px;
 }
 
 .footer-icon {
   font-size: 1.25rem;
   margin-right: 15px;
+  cursor: pointer;
 }
