--- a/client/app/components/Home/HomePage.css
+++ b/client/app/components/Home/HomePage.css
@@ -5,6 +5,164 @@
 }
 
 #homepage-content {
-  height: calc(100% - 7.5rem);
+  min-height: calc(100% - 7.5rem - 62px);
+  padding-top: 62px;
   flex: 1 0 auto;
+}
+
+.perks {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-bottom: 10rem;
+}
+
+.perks h2 {
+  margin: 0;
+  max-width: 25rem;
+  text-align: center;
+  font-size: 1.75rem;
+}
+
+.perks svg {
+  min-width: 25rem;
+}
+
+#gh-dis-cta {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-bottom: 10rem;
+}
+
+#gh-dis-cta a {
+  text-decoration: none !important;
+}
+
+#gh-dis-cta,
+#github-cta,
+#discord-cta {
+  height: 25rem;
+}
+
+#github-cta,
+#discord-cta {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 17rem;
+  padding: 0 4rem;
+  background-color: var(--top-blue);
+  border-radius: 5px;
+  font-size: 1.25rem;
+  cursor: pointer;
+  box-shadow: -2px 4px 0 1px black;
+  transition: background-color .5s, box-shadow .5s;
+}
+
+#github-cta:hover,
+#discord-cta:hover {
+  background-color: #2d5e90;
+  box-shadow: -4px 6px 6px 1px rgba(0, 0, 0, .5);
+  transition: background-color .5s, box-shadow .5s;
+}
+
+#github-cta p,
+#discord-cta p {
+  margin: 0;
+  text-align: center;
+  text-shadow: none;
+  transition: text-shadow .5s;
+}
+
+#github-cta i {
+  color: black;
+  text-shadow: -2px 4px 4px rgba(0, 0, 0, .5);
+  transition: text-shadow .5s;
+}
+
+#github-cta:hover i,
+#github-cta:hover p,
+#discord-cta:hover p {
+  text-shadow: -4px 6px 6px rgba(0, 0, 0, .5);
+  transition: text-shadow .5s;
+}
+
+#discord-cta i {
+  color: var(--discord-blue);
+  text-shadow: -2px 2px 0 rgba(0, 0, 0, .25),
+    -2px 4px 4px rgba(0, 0, 0, .5);
+    transition: text-shadow .5s;
+  }
+
+#discord-cta:hover i {
+  text-shadow: -4px 3px 1px rgba(0, 0, 0, .25),
+  -4px 4px 6px rgba(0, 0, 0, .5);
+  transition: text-shadow .5s;
+}
+
+.cta-icon {
+  font-size: 8rem;
+}
+
+#newsletter-cta {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  height: calc(25rem - 10px);
+  border-top: 5px solid var(--orange-hl);
+  border-bottom: 5px solid var(--orange-hl);
+  margin-bottom: 10rem;
+  background-color: rgba(38, 82, 126, .1);
+}
+
+#newsletter-cta h2 {
+  margin: 0;
+  text-align: center;
+  max-width: 60%;
+}
+
+#newsletter-cta label {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+#newsletter-cta label p {
+  margin: 0 10px 0 0;
+}
+
+#newsletter-cta input {
+  border: 2px solid var(--orange-hl);
+  transition: box-shadow .3s;
+  border-radius: 5px;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  background-color: transparent;
+  color: white;
+  width: 23.5rem;
+  height: 2rem;
+  font-size: 1rem;
+  padding: 0 10px;
+  outline: none;
+}
+
+
+.newsletter-input-focused {
+  box-shadow: 0 3px 0 var(--orange-hl);
+  transition: box-shadow .3s;
+}
+
+#newsletter-cta label button {
+  height: 2.25rem;
+  padding: 0 .5rem;
+  font-weight: 600;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  transition: box-shadow .3s;
 }
