--- a/client/app/components/App.css
+++ b/client/app/components/App.css
@@ -9,17 +9,20 @@ html {
   color: #fff;
   font-size: 16px;
   font-family: 'Roboto', sans-serif;
+  overflow: hidden auto;
 }
 
 html,
 body {
   background-color: var(--bg-color);
   height: 100%;
+  width: 100vw;
   margin: 0;
 }
 
 #app {
   min-height: 100%;
+  width: 100vw;
 }
 
 ul {
@@ -33,6 +36,7 @@ ul {
   padding-inline-start: 0;
 }
 
+a,
 a:visited {
   color: white;
 }
@@ -75,7 +79,7 @@ a:visited {
 }
 
 .link-style {
-  color: var(--orange-hl);
+  color: var(--orange-hl) !important;
   cursor: pointer;
   text-decoration: none;
 }
