--- a/client/app/components/Home/HomePage.css
+++ b/client/app/components/Home/HomePage.css
@@ -1,5 +1,7 @@
 #homepage-container {
+  width: 100vw;
   min-height: 100vh;
+  position: relative;
   display: flex;
   flex-direction: column;
 }
@@ -61,6 +63,7 @@
   cursor: pointer;
   box-shadow: -2px 4px 0 1px black;
   transition: background-color .5s, box-shadow .5s;
+  -webkit-transition: background-color .5s, box-shadow .5s;
 }
 
 #github-cta:hover,
@@ -68,6 +71,7 @@
   background-color: #2d5e90;
   box-shadow: -4px 6px 6px 1px rgba(0, 0, 0, .5);
   transition: background-color .5s, box-shadow .5s;
+  -webkit-transition: background-color .5s, box-shadow .5s;
 }
 
 #github-cta p,
@@ -76,12 +80,14 @@
   text-align: center;
   text-shadow: none;
   transition: text-shadow .5s;
+  -webkit-transition: text-shadow .5s;
 }
 
 #github-cta i {
   color: black;
   text-shadow: -2px 4px 4px rgba(0, 0, 0, .5);
   transition: text-shadow .5s;
+  -webkit-transition: text-shadow .5s;
 }
 
 #github-cta:hover i,
@@ -89,19 +95,22 @@
 #discord-cta:hover p {
   text-shadow: -4px 6px 6px rgba(0, 0, 0, .5);
   transition: text-shadow .5s;
+  -webkit-transition: text-shadow .5s;
 }
 
 #discord-cta i {
   color: var(--discord-blue);
   text-shadow: -2px 2px 0 rgba(0, 0, 0, .25),
     -2px 4px 4px rgba(0, 0, 0, .5);
-    transition: text-shadow .5s;
+  transition: text-shadow .5s;
+  -webkit-transition: text-shadow .5s;
   }
 
 #discord-cta:hover i {
   text-shadow: -4px 3px 1px rgba(0, 0, 0, .25),
   -4px 4px 6px rgba(0, 0, 0, .5);
   transition: text-shadow .5s;
+  -webkit-transition: text-shadow .5s;
 }
 
 .cta-icon {
@@ -155,7 +164,8 @@
 
 .newsletter-input-focused {
   box-shadow: 0 3px 0 var(--orange-hl);
-  transition: box-shadow .3s;
+  transition: box-shadow .3s, background-color .3s, border .3s;
+  -webkit-transition: box-shadow .3s, background-color .3s, border .3s;
 }
 
 #newsletter-cta label button {
@@ -164,5 +174,6 @@
   font-weight: 600;
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
-  transition: box-shadow .3s;
+  transition: box-shadow .3s, background-color .3s, border .3s;
+  -webkit-transition: box-shadow .3s, background-color .3s, border .3s;
 }
