--- a/client/app/components/Home/NavBar/NavBar.css
+++ b/client/app/components/Home/NavBar/NavBar.css
@@ -2,6 +2,7 @@
   position: fixed;
   width: 100%;
   height: 60px;
+  z-index: 50;
   background-color: var(--top-blue);
   border-bottom: 2px solid var(--orange-hl);
 }
