--- a/client/app/components/SignInPage/SignInPage.css
+++ b/client/app/components/SignInPage/SignInPage.css
@@ -61,6 +61,7 @@
 .signin-input-style:focus {
   box-shadow: 0 3px 0 var(--orange-hl);
   transition: box-shadow .3s;
+  -webkit-transition: box-shadow .3s;
 }
 
 @media (max-width: 1000px) {
