--- a/client/app/components/Home/HeroCarousel/HeroCarousel.css
+++ b/client/app/components/Home/HeroCarousel/HeroCarousel.css
@@ -1,14 +1,24 @@
 .hero-container {
-  width: 100%;
+  width: calc(100vw - 6px);
   height: 315px;
   margin-bottom: 10rem;
-  position: relative;
+  position: relative !important;
   border-bottom: 2px solid var(--orange-hl);
 }
 
 .hero-container * {
   position: absolute;
 }
+
+#carousel-item-container {
+  position: relative !important;
+  width: calc((100vw - 6px) * 3);
+  height: 315px;
+  display: flex;
+  flex-direction: row;
+}
+
+#carousel-item-container
 
 .hero-artcred {
   bottom: 0;
@@ -22,6 +32,7 @@
 .hero-img {
   top: 0;
   left: 0;
+  height: 100%;
 }
 
 .hero-text {
@@ -31,12 +42,39 @@
   max-width: 28rem;
   right: 10rem;
   top: calc(50% - 5.5rem);
-
-
 }
 
 .hero-gradient {
   width: 100%;
   height: 100%;
   background: linear-gradient(130deg, transparent, transparent 40%, var(--orange-hl) 40%);
+}
+
+#hero-next-btn,
+#hero-back-btn {
+  top: calc(50% - 25px);
+  z-index: 4;
+  width: 25px;
+  height: 50px;
+  box-shadow: -1px 1px 1px 2px rgba(0, 0, 0, .25);
+}
+
+#hero-next-btn i,
+#hero-back-btn i {
+  position: relative;
+  font-size: 1.5rem;
+}
+
+#hero-next-btn:hover,
+#hero-back-btn:hover {
+  background-color: hsl(20, 74%, 51%);
+  border-color: hsl(20, 74%, 51%);
+}
+
+#hero-next-btn {
+  right: 2vw;
+}
+
+#hero-back-btn {
+  left: 2vw;
 }
