--- a/client/app/components/Home/HeroCarousel/PositionIndicator/PositionIndicator.css
+++ b/client/app/components/Home/HeroCarousel/PositionIndicator/PositionIndicator.css
@@ -17,10 +17,14 @@
   height: .5rem;
   border-radius: 50%;
   background-color: var(--bg-color);
+  transition: all .75s;
+  -webkit-transition: all .75s;
 }
 
 .current-position {
   width: 10px;
   height: 10px;
   background-color: white;
+  transition: all .75s;
+  -webkit-transition: all .75s;
 }
