--- a/client/app/components/App.css
+++ b/client/app/components/App.css
@@ -2,6 +2,7 @@
   --bg-color: #2f2f2b;
   --orange-hl: #ff7128;
   --top-blue: #26527e;
+  --popup-blue: hsl(210, 54%, 22%);
   --discord-blue: #6F87E3;
 }
 
@@ -16,13 +17,13 @@ html,
 body {
   background-color: var(--bg-color);
   height: 100%;
-  width: 100vw;
+  width: 100%;
   margin: 0;
 }
 
 #app {
   min-height: 100%;
-  width: 100vw;
+  width: 100%;
 }
 
 ul {
