--- a/client/app/components/Home/HomePage.css
+++ b/client/app/components/Home/HomePage.css
@@ -1,5 +1,5 @@
 #homepage-container {
-  width: 100vw;
+  width: 100%;
   min-height: 100vh;
   position: relative;
   display: flex;
@@ -7,6 +7,7 @@
 }
 
 #homepage-content {
+  max-width: 100%;
   min-height: calc(100% - 7.5rem - 62px);
   padding-top: 62px;
   flex: 1 0 auto;
@@ -104,11 +105,11 @@
     -2px 4px 4px rgba(0, 0, 0, .5);
   transition: text-shadow .5s;
   -webkit-transition: text-shadow .5s;
-  }
+}
 
 #discord-cta:hover i {
   text-shadow: -4px 3px 1px rgba(0, 0, 0, .25),
-  -4px 4px 6px rgba(0, 0, 0, .5);
+    -4px 4px 6px rgba(0, 0, 0, .5);
   transition: text-shadow .5s;
   -webkit-transition: text-shadow .5s;
 }
@@ -176,4 +177,30 @@
   border-bottom-left-radius: 0;
   transition: box-shadow .3s, background-color .3s, border .3s;
   -webkit-transition: box-shadow .3s, background-color .3s, border .3s;
+}
+
+/* ******** */
+/*  Mobile  */
+/* ******** */
+
+@media (max-width: 850px) {
+  .perks {
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+
+  .perks svg {
+    margin-bottom: 2rem;
+  }
+
+  #gh-dis-cta {
+    flex-direction: column;
+    justify-content: space-between;
+    height: 52rem;
+  }
+
+  #gh-dis-cta:nth-child(1) {
+    margin-bottom: 2rem;
+  }
+
 }
