Added a whole lot more responsive elements to the homepage. only thing left is to work on the carousel, which will take some thought

--- a/client/app/components/Home/Footer/Footer.css
+++ b/client/app/components/Home/Footer/Footer.css
@@ -25,3 +25,9 @@
   margin-right: 15px;
   cursor: pointer;
 }
+
+@media (max-width: 450px) {
+  #footer-icon-container {
+    justify-content: space-evenly;
+  }
+}
