--- a/client/app/components/Home/NavBar/NavBar.css
+++ b/client/app/components/Home/NavBar/NavBar.css
@@ -1,6 +1,7 @@
 #homepage-navbar {
   position: fixed;
   width: 100%;
+  max-width: 100vw;
   height: 60px;
   z-index: 50;
   background-color: var(--top-blue);
@@ -63,6 +64,7 @@
 
 .nav-menu-btn {
   color: var(--orange-hl);
+  -webkit-text-stroke: 1px black;
   width: 2rem;
   height: 2rem;
   font-size: 2rem;
@@ -75,6 +77,7 @@
 
 #homepage-mobile-nav-list {
   width: 30vw;
+  min-width: 200px;
   height: calc(100vh - 60px);
   display: flex;
   flex-direction: column;
@@ -91,13 +94,14 @@
   transition: right .5s;
   -webkit-transition: right .5s;
 }
- .hide-nav-list {
-   right: calc((30vw + 10px) * -1);
-   transition: right .5s;
-  -webkit-transition: right .5s;
- }
 
- @media (max-width: 1075px) {
+.hide-nav-list {
+  right: calc((30vw + 10px) * -1);
+  transition: right .5s;
+  -webkit-transition: right .5s;
+}
+
+@media (max-width: 1075px) {
   .homepage-nav-item {
     display: flex;
     justify-content: flex-start;
@@ -111,5 +115,25 @@
 
   .homepage-nav-item:nth-child(2) {
     margin-left: 0;
+  }
+}
+
+@media (max-width: 700px) {
+  .hide-nav-list {
+    right: -210px;
+  }
+
+  .homepage-nav-item {
+    padding: 20px 0 20px 10px;
+  }
+}
+
+@media (max-width: 450px) {
+  #menu-btn-container {
+    margin-right: .5rem;
+  }
+
+  .homepage-nav-item {
+    padding: 15px 0 15px 10px;
   }
 }
