--- a/client/app/components/Home/HeroCarousel/HeroCarousel.css
+++ b/client/app/components/Home/HeroCarousel/HeroCarousel.css
@@ -1,9 +1,14 @@
 .hero-container {
   width: 100%;
-  height: 315px;
+  aspect-ratio: 4 / 1;
   margin-bottom: 10rem;
   position: relative !important;
-  border-bottom: 2px solid var(--orange-hl);
+}
+
+@supports not (aspect-ratio: 4 / 1) {
+  .hero-container {
+    height: 25vw;
+  }
 }
 
 .hero-container * {
@@ -13,9 +18,20 @@
 #carousel-item-container {
   position: relative !important;
   width: calc(100% * 3);
-  height: 315px;
+  height: 100%;
+  /* height: 33.5vh; */
+  /* height: 315px; */
   display: flex;
   flex-direction: row;
+}
+
+.hero-carousel-item {
+  position: relative !important;
+  width: 100%;
+  height: 100%;
+  /* height: 33.5vh; */
+  /* height: 315px; */
+  border-bottom: 2px solid var(--orange-hl);
 }
 
 .hero-artcred {
@@ -31,7 +47,8 @@
   top: 0;
   left: 0;
   height: 100%;
-  min-width: 800px;
+  width: 50%;
+  /* min-width: 800px; */
 }
 
 .hero-text {
