--- a/client/app/components/Home/HeroCarousel/HeroCarousel.css
+++ b/client/app/components/Home/HeroCarousel/HeroCarousel.css
@@ -1,14 +1,8 @@
 .hero-container {
   width: 100%;
-  aspect-ratio: 4 / 1;
+  height: max(175px, 25vw);
   margin-bottom: 10rem;
   position: relative !important;
-}
-
-@supports not (aspect-ratio: 4 / 1) {
-  .hero-container {
-    height: 25vw;
-  }
 }
 
 .hero-container * {
@@ -19,8 +13,6 @@
   position: relative !important;
   width: calc(100% * 3);
   height: 100%;
-  /* height: 33.5vh; */
-  /* height: 315px; */
   display: flex;
   flex-direction: row;
 }
@@ -29,8 +21,6 @@
   position: relative !important;
   width: 100%;
   height: 100%;
-  /* height: 33.5vh; */
-  /* height: 315px; */
   border-bottom: 2px solid var(--orange-hl);
 }
 
@@ -47,8 +37,7 @@
   top: 0;
   left: 0;
   height: 100%;
-  width: 50%;
-  /* min-width: 800px; */
+  width: 54%;
 }
 
 .hero-text {
@@ -64,22 +53,24 @@
 .hero-gradient {
   width: 100%;
   height: 100%;
-  background: linear-gradient(130deg, transparent, transparent 40%, var(--orange-hl) 40%);
+  background: linear-gradient(to right, transparent, transparent 50%, var(--orange-hl) 50%);
 }
 
 #hero-next-btn,
 #hero-back-btn {
   top: calc(50% - 25px);
   z-index: 4;
-  width: 25px;
-  height: 50px;
+  width: clamp(20px, 4.5vw, 25px);
+  /* width: 25px; */
+  height: clamp(40px, 9vw, 50px);
   box-shadow: -1px 1px 1px 2px rgba(0, 0, 0, .25);
 }
 
 #hero-next-btn i,
 #hero-back-btn i {
   position: relative;
-  font-size: 1.5rem;
+  font-size: clamp(1rem, 4vw, 1.5rem);
+  /* font-size: 1.5rem; */
 }
 
 #hero-next-btn:hover,
@@ -110,8 +101,17 @@
   }
 }
 
+/* @media (max-width: 700px) {
+  .hero-gradient {
+    background: linear-gradient(40deg, transparent, transparent 50%, var(--orange-hl) 50%);
+  }
+} */
+
 @media (max-width: 450px) {
   .hero-container {
     margin-bottom: 7rem;
   }
+  /* .hero-gradient {
+    background: linear-gradient(40deg, transparent, transparent 60%, var(--orange-hl) 60%);
+  } */
 }
