--- a/client/app/components/Home/HeroCarousel/PositionIndicator/PositionIndicator.css
+++ b/client/app/components/Home/HeroCarousel/PositionIndicator/PositionIndicator.css
@@ -1,6 +1,6 @@
 #position-indicator-container {
   bottom: 1vh;
-  left: calc(50% - 30px);
+  right: 25%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
