--- a/client/app/components/Home/NavBar/NavBar.css
+++ b/client/app/components/Home/NavBar/NavBar.css
@@ -16,11 +16,20 @@
   flex-direction: row;
 }
 
+#homepage-title-container {
+  margin-left: 10px;
+  margin-top: 1px;
+  display: flex;
+  align-items: center;
+}
+
 #homepage-title {
-  margin: 10px;
-  margin-top: 0;
-  padding-top: 10px;
-  font-size: 2rem;
+  margin: 0;
+  font-size: clamp(1.5rem, 3vw, 2rem);
+}
+
+#homepage-title a {
+  text-decoration: none !important;
 }
 
 .homepage-nav-item {
