--- a/client/app/components/Home/HeroCarousel/PositionIndicator/PositionIndicator.css
+++ b/client/app/components/Home/HeroCarousel/PositionIndicator/PositionIndicator.css
@@ -1,5 +1,6 @@
 #position-indicator-container {
-  bottom: 1vh;
+  position: absolute;
+  bottom: 5%;
   right: 25%;
   display: flex;
   flex-direction: row;
@@ -7,14 +8,14 @@
   align-items: center;
   width: fit-content;
   height: fit-content;
-  z-index: 4;
+  z-index: 6;
 }
 
 .position-indicator-item {
   position: relative !important;
-  margin-right: 5px;
-  width: .5rem;
-  height: .5rem;
+  margin-right: clamp(2px, 2.5vw, 5px);
+  width: clamp(.25rem, .75vw, .5rem);
+  height: clamp(.25rem, .75vw, .5rem);
   border-radius: 50%;
   background-color: var(--bg-color);
   transition: background-color .75s, height .375s, width .375s;
@@ -22,8 +23,8 @@
 }
 
 .current-position {
-  width: 10px;
-  height: 10px;
+  width: clamp(5px, 1vw, 10px);
+  height: clamp(5px, 1vw, 10px);
   background-color: white;
   transition: background-color .75s, height .375s, width .375s;
   -webkit-transition: background-color .75s, height .375s, width .375s;
