Made the position indicator more dynamic

--- a/client/app/components/SignInPage/SignInPage.css
+++ b/client/app/components/SignInPage/SignInPage.css
@@ -78,8 +78,9 @@
   }
 
   #signin-page-left h1 {
-    font-size: 2rem;
+    font-size: clamp(1.5rem, 3vw, 2rem);;
     margin: 0;
+    margin-right: 5px;
   }
 
 }
