--- a/client/app/components/Home/HeroCarousel/HeroCarousel.css
+++ b/client/app/components/Home/HeroCarousel/HeroCarousel.css
@@ -1,13 +1,13 @@
 .hero-container {
   width: 100%;
-  height: max(175px, 25vw);
+  height: max(225px, 25vw);
   margin-bottom: 10rem;
   position: relative;
 }
 
 #carousel-item-container {
   position: relative;
-  width: calc(100% * 3);
+  width: calc(100% * 4);
   height: 100%;
   display: flex;
   flex-direction: row;
@@ -48,11 +48,14 @@
 
 .hero-text {
   position: absolute;
+  font-family: 'Cinzel';
   margin: 0;
   z-index: 2;
-  font-size: clamp(1rem, 3.5vw, 3rem);
+  font-size: clamp(1.25rem, 3.25vw, 2.75rem);
+  line-height: 1.25;
+  text-align: center;
   max-width: 35vw;
-  right: 10%;
+  right: 7.5%;
   top: 50%;
   transform: translate(0, -50%);
 }
@@ -68,9 +71,8 @@
   position: absolute;
   top: calc(50% - 25px);
   z-index: 4;
-  width: clamp(17.5px, 3vw, 25px);
+  width: clamp(15px, 3vw, 25px);
   height: 50px;
-  /* height: clamp(35px, 6vw, 50px); */
   box-shadow: -1px 1px 1px 2px rgba(0, 0, 0, .25);
 }
 
@@ -92,18 +94,65 @@
 
 #hero-back-btn {
   left: max(10px, 2vw);
-  /* left: 2vw; */
 }
 
-@media (max-width: 700px) {
+@media (max-width: 900px) {
+  .hero-img {
+    position: absolute;
+    width: min(100vw, 450px);
+    height: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .hero-gradient {
+    width: 100%;
+    height: 100%;
+  }
+
+  .hero-artcred-container {
+    left: calc(50vw - 220px);
+    top: 5px;
+    height: fit-content;
+    height: -moz-fit-content;
+    z-index: 5;
+  }
+
   .hero-artcred {
     -webkit-text-stroke: transparent;
     font-weight: 400;
+  }
+
+  .hero-text {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: min(65vw, 350px);
+    min-width: min(65vw, 350px);
+  }
+
+  .hero-text::after {
+    content: "";
+    z-index: -1;
+    position: absolute;
+    padding: 0 10px;
+    width: 100%;
+    height: 120%;
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, .55);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 }
 
 @media (max-width: 450px) {
   .hero-container {
     margin-bottom: 7rem;
+  }
+
+  .hero-artcred-container {
+    left: 5px;
   }
 }
