--- a/client/app/components/Home/HeroCarousel/PositionIndicator/PositionIndicator.css
+++ b/client/app/components/Home/HeroCarousel/PositionIndicator/PositionIndicator.css
@@ -1,6 +1,7 @@
 #position-indicator-container {
   position: absolute;
   bottom: 5%;
+  transform: translate(25%, 0);
   right: 25%;
   display: flex;
   flex-direction: row;
@@ -28,4 +29,25 @@
   background-color: white;
   transition: background-color .75s, height .375s, width .375s;
   -webkit-transition: background-color .75s, height .375s, width .375s;
+}
+
+@media (max-width: 900px) {
+  #position-indicator-container {
+    transform: translate(50%, 0);
+    right: 50%;
+    z-index: 10;
+  }
+
+  #position-indicator-container::after {
+    content: "";
+    z-index: -1;
+    position: absolute;
+    width: 120%;
+    height: 200%;
+    top: 50%;
+    left: 50%;
+    transform: translate(calc(-50% - 1.5px), -50%);
+    border-radius: 5px;
+    background-color: rgba(255, 113, 40, .5);
+  }
 }
