--- a/client/app/components/Home/NavBar/NavBar.css
+++ b/client/app/components/Home/NavBar/NavBar.css
@@ -1,4 +1,5 @@
 #homepage-navbar {
+  /* font-family: 'Cinzel'; */
   position: fixed;
   width: 100%;
   max-width: 100vw;
@@ -38,7 +39,8 @@
   align-items: center;
   height: 100%;
   border-left: 2px solid var(--orange-hl);
-  font-weight: 500;
+  /* font-weight: 600; */
+  font-weight:400;
   padding: 0 30px;
 }
 
@@ -73,7 +75,6 @@
 
 .nav-menu-btn {
   color: var(--orange-hl);
-  -webkit-text-stroke: 1px black;
   width: 2rem;
   height: 2rem;
   font-size: 2rem;
@@ -82,6 +83,10 @@
   border: none;
   background-color: transparent;
   cursor: pointer;
+}
+
+.nav-menu-btn i {
+  text-shadow: 1px 1px 0 #000;
 }
 
 #homepage-mobile-nav-list {
