--- a/client/app/components/UnderConstruction/UnderConstruction.css
+++ b/client/app/components/UnderConstruction/UnderConstruction.css
@@ -1,5 +1,4 @@
 #under-constructions {
-  padding: 0 25%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -7,21 +6,42 @@
 
 #under-constructions-top-bar {
   width: 100vw;
-  min-height: 58px;
+  height: 60px;
+  border-bottom: 2px solid var(--orange-hl);
   background-color: var(--top-blue);
+  display: flex;
+  align-items: center;
 }
 
 #under-constructions-title {
-  width: fit-content;
-  margin: 10px;
-  margin-top: 0;
-  padding-top: 10px;
-  font-size: 2rem;
+  width: fit-content !important;
+  margin: 0;
+  margin-left: 10px;
+  font-size: clamp(1.5rem, 3vw, 2rem);
 }
 
-#under-constructions i {
+#under-constructions-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  line-height: 1.5;
+}
+
+#under-constructions-content i {
   margin-top: 1rem;
-  font-size: 10rem;
+  font-size: clamp(7.5rem, 25vw, 10rem);
   color: var(--orange-hl);
+}
+
+#under-constructions-content p {
+  max-width: max(250px, 60vw);
+  font-size: clamp(.825rem, 3vw, 1rem);
+  /* font-size: clamp(.75rem, 3vw, 1rem); */
+}
+
+#under-constructions-content h1 {
+  font-size: clamp(1.5rem, 5vw, 2rem);
+  max-width: max(300px, 65vw) !important;
 }
 
