--- a/client/app/components/Notification/Notification.css
+++ b/client/app/components/Notification/Notification.css
@@ -2,10 +2,12 @@
   position: fixed;
   bottom: 5%;
   right: 2.5%;
-  padding: .5rem 1rem;
+  display: grid;
+  grid-template-columns: 5% 80% 15%;
+  grid-template-rows: 15% 70% 15%;
   font-size: 1rem;
   color: white;
-  min-height: 50px;
+  min-height: 75px;
   width: 300px;
   border-radius: 5px;
   box-shadow: 1px 1px 3px 1px #000;
@@ -17,10 +19,18 @@
   to { opacity: 100%; }
 }
 
+.notification-container p {
+  margin: 0;
+  grid-column-start: 2;
+  grid-row-start: 2;
+  justify-self: start;
+  align-self: center;
+}
+
 .close-notification-btn {
-  position: absolute;
-  top: 10px;
-  right: 15px;
+  grid-row-start: 2;
+  grid-column-start: 3;
+  place-self: center;
   background-color: transparent;
   outline: none;
   border: none;
@@ -33,7 +43,7 @@
 }
 
 .close-notification-btn i {
-  font-size: 1rem;
+  font-size: 1.25rem;
   color: inherit;
 }
 
