--- a/client/app/components/App.css
+++ b/client/app/components/App.css
@@ -64,7 +64,8 @@ a:visited {
 }
 
 .button-style:hover {
-  background-color: var(--bg-color);
+  /* background-color: var(--bg-color); */
+  background-color: hsl(20, 100%, 68%);
   transition: background-color .2s;
   -webkit-transition: background-color .2s;
 }
