--- a/client/app/components/Home/HomePage.css
+++ b/client/app/components/Home/HomePage.css
@@ -132,10 +132,10 @@
   max-height: 40px;
   font-size: 1rem;
   padding: .5rem;
-  box-shadow: 0 0 1rem .125rem rgba(0, 0, 0, .5);
-  text-shadow: -1px 1px .125rem rgba(0, 0, 0, .5);
-  transition: text-shadow .3s;
-  -webkit-transition: text-shadow .3s;
+  box-shadow: 0 .0625rem .25rem .125rem rgba(0, 0, 0, .25);
+  /* text-shadow: -.0625rem .0625rem rgb(50, 50, 50); */
+  transition: background-color .3s, text-shadow .3s, box-shadow .3s;
+  -webkit-transition: background-color .3s, text-shadow .3s, box-shadow .3s;
   animation: button-appear .5s;
 }
 
@@ -150,9 +150,10 @@
 }
 
 #scroll-top-btn:hover {
-  text-shadow: -.125rem .125rem .125rem rgba(0, 0, 0, .5);
-  transition: text-shadow .3s;
-  -webkit-transition: text-shadow .3s;
+  box-shadow: 0 .25rem .75rem .5rem rgba(0, 0, 0, .25);
+  text-shadow: -.0625rem .0625rem .0625rem rgba(100, 100, 100, 1);
+  transition: background-color .3s, text-shadow .3s, box-shadow .3s;
+  -webkit-transition: background-color .3s, text-shadow .3s, box-shadow .3s;
 }
 
 /* ******** */
