--- a/client/app/components/Home/NavBar/NavBar.css
+++ b/client/app/components/Home/NavBar/NavBar.css
@@ -49,14 +49,15 @@
   border-left: 2px solid var(--orange-hl);
   font-weight:400;
   padding: 0 30px;
-  transition: background-color .3s;
-  -webkit-transition: background-color .3s;
+  transition: background-color .3s, box-shadow .3s;
+  -webkit-transition: background-color .3s, box-shadow .3s;
 }
 
 .homepage-nav-item:hover {
   background-color: #2d5e90;
-  transition: background-color .3s;
-  -webkit-transition: background-color .3s;
+  box-shadow: 1px -4px 4px 4px rgba(0, 0, 0, .5);
+  transition: background-color .3s, box-shadow .3s;
+  -webkit-transition: background-color .3s, box-shadow .3s;
 }
 
 .homepage-link-style {
