--- a/client/app/components/Home/NavBar/NavBar.css
+++ b/client/app/components/Home/NavBar/NavBar.css
@@ -9,6 +9,7 @@
   box-shadow: 0 .25rem 1rem rgba(0, 0, 0, .5);
   display: flex;
   flex-direction: row;
+  overflow: hidden;
 }
 
 .top-bar-list,
@@ -55,7 +56,7 @@
 
 .homepage-nav-item:hover {
   background-color: #2d5e90;
-  box-shadow: 1px -4px 4px 4px rgba(0, 0, 0, .5);
+  box-shadow: .0625rem 0 .25rem .25rem rgba(0, 0, 0, .5);
   transition: background-color .3s, box-shadow .3s;
   -webkit-transition: background-color .3s, box-shadow .3s;
 }
@@ -111,8 +112,9 @@
 }
 
 #homepage-mobile-nav-list {
+  overflow: hidden;
   width: 30vw;
-  min-width: 200px;
+  min-width: 12.5rem;
   height: calc(100vh - 60px);
   margin-top: 60px;
   display: flex;
@@ -146,13 +148,14 @@
     justify-content: flex-start;
     height: fit-content;
     height: -moz-fit-content;
-    padding: 25px 0 25px 15px;
+    padding: 1.5rem 0 1.5rem 1rem;
     border: none;
-    border-bottom: 2px solid var(--orange-hl);
+    border-bottom: .125rem solid var(--orange-hl);
   }
 
-  .homepage-nav-item:nth-child(2) {
-    margin-left: 0;
+  .homepage-nav-item:hover {
+    background-color: #2d5e90;
+    box-shadow: 0 .25rem .25rem .25rem rgba(0, 0, 0, .5);
   }
 }
 
@@ -162,16 +165,12 @@
   }
 
   .homepage-nav-item {
-    padding: 20px 0 20px 10px;
+    padding: 1.25rem 0 1.25rem .625rem;
   }
 }
 
 @media (max-width: 450px) {
   #menu-btn-container {
     margin-right: .5rem;
-  }
-
-  .homepage-nav-item {
-    padding: 15px 0 15px 10px;
   }
 }
