--- a/client/app/components/Home/NavBar/NavBar.css
+++ b/client/app/components/Home/NavBar/NavBar.css
@@ -9,7 +9,6 @@
   box-shadow: 0 .25rem 1rem rgba(0, 0, 0, .5);
   display: flex;
   flex-direction: row;
-  overflow: hidden;
 }
 
 .top-bar-list,
@@ -56,7 +55,7 @@
 
 .homepage-nav-item:hover {
   background-color: #2d5e90;
-  box-shadow: .0625rem 0 .25rem .25rem rgba(0, 0, 0, .5);
+  box-shadow: .0625rem -.3125rem .25rem .25rem rgba(0, 0, 0, .5);
   transition: background-color .3s, box-shadow .3s;
   -webkit-transition: background-color .3s, box-shadow .3s;
 }
