--- a/client/app/components/Home/HeroCarousel/HeroCarousel.css
+++ b/client/app/components/Home/HeroCarousel/HeroCarousel.css
@@ -97,7 +97,7 @@
 #hero-next-btn {
   /* right: max(10px, 2vw); */
   right: 0;
-  box-shadow: -.25rem 0 .5rem rgba(0, 0, 0, .25);
+  box-shadow: -.125rem 0 .5rem .125rem rgba(0, 0, 0, .25);
   text-shadow: -.0625rem .0625rem .0625rem rgba(0, 0, 0, .5);
   border-top-left-radius: .25rem;
   border-bottom-left-radius: .25rem;
@@ -109,7 +109,7 @@
 #hero-back-btn {
   /* left: max(10px, 2vw); */
   left: 0;
-  box-shadow: .25rem 0 .5rem rgba(0, 0, 0, .35);
+  box-shadow: .125rem 0 .5rem .125rem rgba(0, 0, 0, .35);
   text-shadow: -.0625rem .0625rem .0625rem rgba(0, 0, 0, .5);
   border-top-right-radius: .25rem;
   border-bottom-right-radius: .25rem;
