--- a/client/app/components/Home/NavBar/NavBar.css
+++ b/client/app/components/Home/NavBar/NavBar.css
@@ -41,6 +41,7 @@
   text-decoration: none !important;
 }
 
+.selected-nav-item,
 .homepage-nav-item {
   display: flex;
   justify-content: center;
@@ -58,6 +59,10 @@
   box-shadow: .0625rem -.3125rem .25rem .25rem rgba(0, 0, 0, .5);
   transition: background-color .3s, box-shadow .3s;
   -webkit-transition: background-color .3s, box-shadow .3s;
+}
+
+.selected-nav-item {
+  background-color: hsl(210, 54%, 22%);
 }
 
 .homepage-link-style {
