--- a/client/app/components/UnderConstruction/UnderConstruction.css
+++ b/client/app/components/UnderConstruction/UnderConstruction.css
@@ -4,28 +4,13 @@
   align-items: center;
 }
 
-#under-constructions-top-bar {
-  width: 100vw;
-  height: 60px;
-  border-bottom: 2px solid var(--orange-hl);
-  background-color: var(--top-blue);
-  display: flex;
-  align-items: center;
-}
-
-#under-constructions-title {
-  width: fit-content !important;
-  margin: 0;
-  margin-left: 10px;
-  font-size: clamp(1.5rem, 3vw, 2rem);
-}
-
 #under-constructions-content {
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
   line-height: 1.5;
+  padding-top: 3.875rem;
 }
 
 #under-constructions-content i {
