--- a/client/app/components/Home/HeroCarousel/PositionIndicator/PositionIndicator.css
+++ b/client/app/components/Home/HeroCarousel/PositionIndicator/PositionIndicator.css
@@ -18,7 +18,7 @@
   width: clamp(.25rem, .75vw, .5rem);
   height: clamp(.25rem, .75vw, .5rem);
   border-radius: 50%;
-  background-color: var(--bg-color);
+  /* background-color: var(--bg-color); */
   transition: background-color .75s, height .375s, width .375s;
   -webkit-transition: background-color .75s, height .375s, width .375s;
 }
@@ -26,7 +26,7 @@
 .current-position {
   width: clamp(5px, 1vw, 10px);
   height: clamp(5px, 1vw, 10px);
-  background-color: white;
+  background-color: white !important;
   transition: background-color .75s, height .375s, width .375s;
   -webkit-transition: background-color .75s, height .375s, width .375s;
 }
